# purgatorious-firmware

./: Cargo.toml  README.md  pid.txt  q3_backup.json  q3_backup_2.json  test.sh  upload.sh
.cargo/: config
gui/: Cargo.toml
gui/src/: main.rs
i2c/: Cargo.toml
i2c/src/: ads1113.rs  lib.rs  main.rs  mcp9600.rs
pid-autotune/: Cargo.toml
pid-autotune/src/: main.rs
screw/: Cargo.toml
screw/src/: lib.rs  main.rs  q3_backup.rs  quantumiii.rs
shared/src/: lib.rs
thermo/: Cargo.toml  README.md
thermo/src/: lib.rs  main.rs
urap/: Cargo.toml
urap-mod/: Cargo.toml
urap-mod/src/: main.rs
urap/src/: lib.rs  usockets.rs
watchdog/: Cargo.toml  README.md
watchdog/src/: lib.rs  main.rs
