[package]
name = "screw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urap.workspace = true
shared.workspace = true
watchdog.workspace = true
rppal = "0.17.1"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.18"
