[package]
name = "thermo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pid = "4.0.0"
rppal = "0.17.1"
urap.workspace = true
shared.workspace = true
i2c.workspace = true
screw.workspace = true
watchdog.workspace = true
lazy_static = "1.4.0"
